--- a/photoshop.html
+++ b/photoshop.html
@@ -94,6 +94,15 @@
 						</ul>
 					</div>
 				</section>
+					<section id="five" class="spotlight style3 left">
+					<span class="image fit main center"><img src="images/.jpg" alt="" /></span>
+					<div class="content">
+						<header>
+							<h2>This is my AME Final</h2>
+							<p>This was my favortite thing to do during the first semester because we could do whatever we wnated and we could make it look however we want.</p>
+						</ul>
+					</div>
+				</section>
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 					<class="copyright">
