--- a/photoshop.html
+++ b/photoshop.html
@@ -95,7 +95,7 @@
 					</div>
 				</section>
 					<section id="five" class="spotlight style3 left">
-					<span class="image fit main center"><img src="images/.jpg" alt="" /></span>
+					<span class="image fit main center"><img src="images/goku-sprite.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>This is my AME Final</h2>
