--- a/photoshop.html
+++ b/photoshop.html
@@ -83,23 +83,14 @@
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
-
-			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
-					<span class="image fit main center"><img src="images/Final.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>This is my AME Final</h2>
-							<p>This was my favortite thing to do during the first semester because we could do whatever we wnated and we could make it look however we want.</p>
-						</ul>
-					</div>
+				
 				</section>
-					<section id="five" class="spotlight style3 left">
+					<section id="three" class="spotlight style3 left">
 					<span class="image fit main center"><img src="images/goku-sprite.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>This is my AME Final</h2>
-							<p>This was my favortite thing to do during the first semester because we could do whatever we wnated and we could make it look however we want.</p>
+							<h2>This is my Gif that I made</h2>
+							<p>This is my favortite thing that we have done because we I think that making a GIF was fun.</p>
 						</ul>
 					</div>
 				</section>
