--- a/photoshop.html
+++ b/photoshop.html
@@ -86,7 +86,7 @@
 				
 				</section>
 					<section id="three" class="spotlight style3 left">
-					<span class="image fit main center"><img src="images/goku-sprite.jpg" alt="It is a perdson figthing" /></span>
+					<span class="image fit main center"><img src="images/goku-sprite.gif" alt="It is a perdson figthing" /></span>
 					<div class="content">
 						<header>
 							<h2>This is my Gif that I made</h2>
