--- a/photoshop.html
+++ b/photoshop.html
@@ -86,7 +86,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main center"><img src="images/Goku.gif" alt="" /></span>
+					<span class="image fit main center"><img src="images/goku-sprite.gif" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>This is my Gif</h2>
