--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 							</li>
 							<li><a href="photoshop.html">Photoshop Assignments</a>
 							</li>
-							<li><a href="gallery.html">More Assignments</a></li>
-							<li>
+							<li><a href="gallery.html">Photoshop Assignments</a>
+							</li>
 								</ul>
+								<ul>
 								<li><a href="#">Option 1</a></li>
 									<li><a href="#">Option 2</a></li>
 									<li><a href="#">Option 3</a></li>
