--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 <p>Here is some work that i have done earlier this year
 for more work go to my <a href="photoshop.html">Photoshop Assignments</a>
 </p>
-<img src="images/festival.jpg" class="image fit" alt="" /></a>
+<embed src="images/Iampoem.swf" alt="" /></a>
+<h2>I a am Poem</h2>		
+<p>This is a poem I made myself for my final.</p>
 </div>
 <div class="8u$ 12u$(medium) important(medium)">
 <section id="content">
